# task_api

./: .env.template  .gitattributes  .gitguardian  .gitignore  README.md  compose.yml  manage.py  production.yml  pyproject.toml  ruff.toml  schema.yml  setup.cfg
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile  start
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start
compose/production/django/: Dockerfile  entrypoint
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
task_api/: conftest.py
task_api/authentication/: apps.py
task_api/authentication/api/: serializers.py  urls.py  views.py
task_api/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
task_api/tasks/: admin.py  apps.py  models.py  tasks.py
task_api/tasks/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
task_api/tasks/migrations/: 0001_initial.py
task_api/tasks/tests/: factories.py
task_api/users/: admin.py  apps.py  models.py
task_api/users/api/: serializers.py  urls.py  views.py
task_api/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
task_api/users/tests/: factories.py
task_api/utils/: base.py  files.py  nums.py
test/: README.md
test/auth_tests/: test_views.py
test/tasks_tests/: test_views.py
test/users_tests/: test_models.py  test_serializers.py  test_views.py
